--- a/Performer/project.json
+++ b/Performer/project.json
@@ -4,6 +4,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "OpenDataPortalActivities": "[1.0.9]",
+    "UiPath.Credentials.Activities": "[1.1.6479.13204]",
     "UiPath.Excel.Activities": "[2.8.1-preview]",
     "UiPath.Mail.Activities": "[1.7.2]",
     "UiPath.System.Activities": "[20.2.0-preview]",
